--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,3 +16,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.h1 {
+  /* font-size: 3rem; */
+  font-weight: normal;
+  font-size: 60px;
+  font-family: gameFont;
+  margin: 0;
+  color:rgb(0, 0, 0)
+}
+
+.button {
+  border: none;
+  color: rgb(255, 255, 255);
+  padding: 18px 32px 15px 32px;
+  text-align: center;
+  font-family: gameFont;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 30px;
+  margin: 4px 10px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.button1 {background-color: #5540b4;} /* Green */
+.button2 {background-color: #3aac69;} /* Blue */
